maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: ';' expected but double literal found.
  direction = random.3()
                    ^